--- a/public/pricing.html
+++ b/public/pricing.html
@@ -44,13 +44,13 @@
               <h2 class="text-2xl font-semibold mb-2">${plan.name}</h2>
               <p class="text-gray-600 mb-4">${plan.description || ''}</p>
               <div class="text-3xl font-bold text-blue-600 mb-6">
-                $${plan.price}/mo
+                €${plan.price}/mo
               </div>
               <ul class="text-sm text-gray-700 mb-6 space-y-1">
                 ${(plan.features || '').split(',').map(f => `<li>✅ ${f.trim()}</li>`).join('')}
               </ul>
             </div>
-            <a href="/signup.html?plan=${plan.id}"
+            <a href="/register.html?plan=${plan.slug}"
               class="mt-auto inline-block bg-blue-600 text-white text-center px-4 py-2 rounded hover:bg-blue-700 transition">
               Start Free Trial
             </a>
