🧩 Add partials-loader.js to dynamically inject header/footer in pricing.html

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -29,6 +29,7 @@
   <!-- bottom of public/pricing.html, before </body> -->
 <script defer src="/scripts/partials-loader.js"></script>
 <script defer src="/scripts/pricing.js"></script>
+<script defer src="/scripts/partials-loader.js?v=1"></script>
 
 </body>
 </html>
