--- a/public/pricing.html
+++ b/public/pricing.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pricing Plans | Tidyzenic</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-  <script defer src="/scripts/partials-loader.js"></script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
@@ -26,10 +25,8 @@
   <!-- Footer Include -->
   <div id="footer"></div>
 
-  <!-- bottom of public/pricing.html, before </body> -->
-<script defer src="/scripts/partials-loader.js"></script>
-<script defer src="/scripts/pricing.js"></script>
-<script defer src="/scripts/partials-loader.js?v=1"></script>
-
+  <!-- Scripts -->
+  <script defer src="/scripts/partials-loader.js?v=2"></script>
+  <script defer src="/scripts/pricing.js?v=1"></script>
 </body>
 </html>
